24.12.14 지은 : token이 null로 넘어오는거 해결한듯